erDiagram
    Configuration ||--o{ ConfigurationHistory : "has versions"
    AiModel ||--o{ TierRouting : "used in routing"
    FeatureFlag ||--o{ TierOverride : "has overrides"

    Configuration {
        Guid Id PK
        string Key UK
        string Value
        string Description
        string Category
        bool IsActive
        int Version
        DateTime CreatedAt
        DateTime UpdatedAt
    }

    ConfigurationHistory {
        Guid Id PK
        Guid ConfigurationId FK
        string Value
        int Version
        DateTime ChangedAt
        Guid ChangedBy FK
    }

    AiModel {
        Guid Id PK
        string Name
        string ProviderId
        string ModelId UK
        int Priority
        bool IsActive
        int MaxTokens
        decimal CostPerMillionTokens
        DateTime CreatedAt
    }

    TierRouting {
        Guid Id PK
        string Tier
        string ProductionModelsJson
        string TestModelsJson
        string DefaultModel
        string FallbackModel
        DateTime UpdatedAt
    }

    FeatureFlag {
        Guid Id PK
        string Key UK
        string Description
        bool IsEnabled
        string RequiredRole
        string RequiredTier
        string TierOverridesJson
        DateTime CreatedAt
    }

    TierOverride {
        string Tier
        bool IsEnabled
    }

    PdfUploadLimits {
        Guid Id PK
        long MaxFileSizeBytes
        int MaxPagesPerDocument
        int MaxDocumentsPerGame
        string AllowedMimeTypes
        DateTime UpdatedAt
    }

    TierPdfLimits {
        Guid Id PK
        string Tier UK
        int MaxPerDay
        int MaxPerWeek
        int MaxPerGame
        DateTime UpdatedAt
    }

    GameLibraryLimits {
        Guid Id PK
        string Tier UK
        int MaxGames
        DateTime UpdatedAt
    }

    SessionLimits {
        Guid Id PK
        string Tier UK
        int MaxConcurrentSessions
        DateTime UpdatedAt
    }

    RateLimitConfig {
        Guid Id PK
        string Tier UK
        int MaxPendingRequests
        int MaxMonthlySubmissions
        int CooldownHours
        DateTime UpdatedAt
    }

    UserRateLimitOverride {
        Guid Id PK
        Guid UserId FK
        int CustomLimit
        DateTime ExpiresAt
        string Reason
        DateTime CreatedAt
    }
